--- a/composer.json
+++ b/composer.json
@@ -52,8 +52,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Acme\\SyliusExamplePlugin\\": "src/",
-            "Tests\\Acme\\SyliusExamplePlugin\\": "tests/"
+            "Gigamarr\\SyliusBankOfGeorgiaPlugin\\": "src/",
+            "Tests\\Gigamarr\\SyliusBankOfGeorgiaPlugin\\": "tests/"
         }
     },
     "autoload-dev": {
