--- a/src/Resources/config/config.yaml
+++ b/src/Resources/config/config.yaml
@@ -2,7 +2,7 @@ winzou_state_machine:
     sylius_order_checkout:
         callbacks:
             after:
-                complete_pay_pal_order:
+                authorize_bank_of_georgia_order:
                     on: ['complete']
-                    do: ['@gigamarr_sylius_bank_of_georgia_plugin.resolver.bank_of_georgia_authorization', 'resolve']
+                    do: ['@gigamarr_sylius_bank_of_georgia_plugin.resolver.authorize', 'resolve']
                     args: ['object']
