--- a/src/Resources/config/services/resolvers.yaml
+++ b/src/Resources/config/services/resolvers.yaml
@@ -2,3 +2,5 @@ services:
     gigamarr.sylius_bank_of_georgia_plugin.resolver.authorize:
         class: Gigamarr\SyliusBankOfGeorgiaPlugin\Resolver\AuthorizeResolver
         public: true
+        arguments:
+            - '@payum'
