--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -1,4 +1,4 @@
 imports:
     - { resource: "services/form_types.yaml" }
     - { resource: "services/payum.yaml" }
-    - { resource: "services/resolvers.yaml" }
+    - { resource: "services/processors.yaml" }
