master: inject bog client in authorization processor

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -1,4 +1,5 @@
 imports:
+    - { resource: "services/client.yaml" }
     - { resource: "services/form_types.yaml" }
     - { resource: "services/payum.yaml" }
     - { resource: "services/processors.yaml" }
