--- a/src/Resources/config/services/processors.yaml
+++ b/src/Resources/config/services/processors.yaml
@@ -1,6 +1,6 @@
 services:
     gigamarr.sylius_bank_of_georgia_plugin.processor.authorization:
-        class: Gigamarr\SyliusBankOfGeorgiaPlugin\Resolver\AuthorizationProcessor
+        class: Gigamarr\SyliusBankOfGeorgiaPlugin\Processor\AuthorizationProcessor
         public: true
         arguments:
             - '@payum'
