master: create gateway config resolver and work on authorization process

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -3,3 +3,4 @@ imports:
     - { resource: "services/form_types.yaml" }
     - { resource: "services/payum.yaml" }
     - { resource: "services/processors.yaml" }
+    - { resource: "services/resolvers.yaml" }
