--- a/src/Resources/config/services/processors.yaml
+++ b/src/Resources/config/services/processors.yaml
@@ -4,5 +4,6 @@ services:
         public: true
         arguments:
             - '@payum'
+            - '@Gigamarr\SyliusBankOfGeorgiaPlugin\Resolver\GatewayConfigResolver'
             - '@Gigamarr\SyliusBankOfGeorgiaPlugin\Client\BankOfGeorgiaClient'
             - '@monolog.logger.bank_of_georgia'
