master: add dummy controller for testing stuff since I can't get xdebug to work and also remove redundant class definitons from yaml files

--- a/src/Resources/config/services/controllers.yaml
+++ b/src/Resources/config/services/controllers.yaml
@@ -1,8 +1,7 @@
 services:
-    Gigamarr\SyliusBankOfGeorgiaPlugin\Processor\AuthorizationProcessor:
-        public: true
+    Gigamarr\SyliusBankOfGeorgiaPlugin\Controller\HelloWorldController:
         arguments:
-            - '@payum'
             - '@Gigamarr\SyliusBankOfGeorgiaPlugin\Resolver\GatewayConfigResolver'
             - '@Gigamarr\SyliusBankOfGeorgiaPlugin\Client\BankOfGeorgiaClient'
-            - '@monolog.logger.bank_of_georgia'
+        tags:
+            - name: 'controller.service_arguments'
