--- a/src/Resources/config/services/resolvers.yaml
+++ b/src/Resources/config/services/resolvers.yaml
@@ -1,6 +1,5 @@
 services:
     Gigamarr\SyliusBankOfGeorgiaPlugin\Resolver\GatewayConfigResolver:
-        class: Gigamarr\SyliusBankOfGeorgiaPlugin\Resolver\GatewayConfigResolver
         arguments:
             - '@sylius.repository.gateway_config'
-            - '%gigamarr.sylius_bank_of_georgia_plugin.factory_name%'
+            - '%gigamarr.sylius_bank_of_georgia_plugin.gateway_factory_name%'
