--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -1,5 +1,6 @@
 imports:
     - { resource: "services/client.yaml" }
+    - { resource: "services/controllers.yaml" }
     - { resource: "services/form_types.yaml" }
     - { resource: "services/payum.yaml" }
     - { resource: "services/processors.yaml" }
