--- a/src/Resources/config/services/client.yaml
+++ b/src/Resources/config/services/client.yaml
@@ -2,4 +2,6 @@ services:
     Gigamarr\SyliusBankOfGeorgiaPlugin\Client\BankOfGeorgiaClient:
         arguments:
             - '@sylius.http_client'
+            - '@Gigamarr\SyliusBankOfGeorgiaPlugin\Resolver\GatewayConfigResolver'
             - '%gigamarr.sylius_bank_of_georgia_plugin.api_base_url%'
+            - '@monolog.logger.bank_of_georgia'
