master: remove unused status action

--- a/src/Resources/config/services/controllers.yaml
+++ b/src/Resources/config/services/controllers.yaml
@@ -1,6 +1,7 @@
 services:
     Gigamarr\SyliusBankOfGeorgiaPlugin\Controller\HelloWorldController:
         arguments:
-            - '@Gigamarr\SyliusBankOfGeorgiaPlugin\Client\BankOfGeorgiaClient'
+            - '@Gigamarr\SyliusBankOfGeorgiaPlugin\Processor\AuthorizationProcessor'
+            - '@sylius.repository.order'
         tags:
             - name: 'controller.service_arguments'
