--- a/src/Resources/config/services/payum.yaml
+++ b/src/Resources/config/services/payum.yaml
@@ -8,7 +8,6 @@ services:
               factory: bank_of_georgia
 
     Gigamarr\SyliusBankOfGeorgiaPlugin\Payum\Action\AuthorizeAction:
-        arguments:
-            - '@Gigamarr\SyliusBankOfGeorgiaPlugin\Client\BankOfGeorgiaClient'
+        public: true
         tags:
             - { name: payum.action, factory: '%gigamarr.sylius_bank_of_georgia_plugin.gateway_factory_name%', alias: payum.action.authorize }
