--- a/src/Resources/config/services/processors.yaml
+++ b/src/Resources/config/services/processors.yaml
@@ -3,4 +3,5 @@ services:
         public: true
         arguments:
             - '@payum'
+            - '%gigamarr.sylius_bank_of_georgia_plugin.gateway_factory_name%'
  
