--- a/src/Resources/config/services/payum.yaml
+++ b/src/Resources/config/services/payum.yaml
@@ -9,5 +9,7 @@ services:
 
     Gigamarr\SyliusBankOfGeorgiaPlugin\Payum\Action\AuthorizeAction:
         public: true
+        arguments:
+            - '@monolog.logger.bank_of_georgia'
         tags:
             - { name: payum.action, factory: '%gigamarr.sylius_bank_of_georgia_plugin.gateway_factory_name%', alias: payum.action.authorize }
