master: complete authorization functionality

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -2,6 +2,7 @@ imports:
     - { resource: "services/client.yaml" }
     - { resource: "services/controllers.yaml" }
     - { resource: "services/form_types.yaml" }
+    - { resource: "services/formatters.yaml" }
     - { resource: "services/payum.yaml" }
     - { resource: "services/processors.yaml" }
     - { resource: "services/providers.yaml" }
