BLBOG-1: only allow transition to complete if current state is authorized

--- a/src/Resources/config/config.yaml
+++ b/src/Resources/config/config.yaml
@@ -6,6 +6,14 @@ winzou_state_machine:
                     on: ['complete']
                     do: ['@Gigamarr\SyliusBankOfGeorgiaPlugin\Processor\AuthorizationProcessor', 'process']
                     args: ['object']
+    
+    sylius_payment:
+        callbacks:
+            guard:  
+                guard_complete:
+                    on: 'complete'
+                    do: ['@Gigamarr\SyliusBankOfGeorgiaPlugin\StateMachine\Guard\GuardPaymentComplete', '__invoke']
+                    args: ['object']
 
 monolog:
     channels:
