master: stop callback guard execution if payment's gateway is not bank of georgia

--- a/src/Resources/config/services/state_machine_guards.yaml
+++ b/src/Resources/config/services/state_machine_guards.yaml
@@ -1,3 +1,5 @@
 services:
     Gigamarr\SyliusBankOfGeorgiaPlugin\StateMachine\Guard\GuardPaymentComplete:
         public: true
+        arguments:
+            - '%gigamarr.sylius_bank_of_georgia_plugin.gateway_factory_name%'
