--- a/src/Resources/config/services/controllers.yaml
+++ b/src/Resources/config/services/controllers.yaml
@@ -1,3 +1,5 @@
 services:
     Gigamarr\SyliusBankOfGeorgiaPlugin\Controller\PaymentStatusChangeCallbackController:
         tags: [controller.service_arguments]
+        arguments:
+            - '@sylius.repository.order'
