master: transition payment to processing if status is in_progress. transition order to cancelled state if status is error

--- a/src/Resources/config/config.yaml
+++ b/src/Resources/config/config.yaml
@@ -14,6 +14,9 @@ winzou_state_machine:
                     on: 'complete'
                     do: ['@Gigamarr\SyliusBankOfGeorgiaPlugin\StateMachine\Guard\GuardPaymentComplete', '__invoke']
                     args: ['object']
+            after:
+                sylius_process_order:
+                    disabled: true
 
 sylius_resource:
     resources:
