--- a/src/Resources/config/services/processors.yaml
+++ b/src/Resources/config/services/processors.yaml
@@ -5,3 +5,8 @@ services:
             - '@payum'
             - '%gigamarr.sylius_bank_of_georgia_plugin.gateway_factory_name%'
  
+    Gigamarr\SyliusBankOfGeorgiaPlugin\Processor\CompletionProcessor:
+        public: true
+        arguments:
+            - '@payum'
+            - '%gigamarr.sylius_bank_of_georgia_plugin.gateway_factory_name%'
