--- a/src/Resources/config/config.yaml
+++ b/src/Resources/config/config.yaml
@@ -14,6 +14,11 @@ winzou_state_machine:
                     on: 'complete'
                     do: ['@Gigamarr\SyliusBankOfGeorgiaPlugin\StateMachine\Guard\GuardPaymentComplete', '__invoke']
                     args: ['object']
+            before:
+                payment_complete:
+                    on: ['complete']
+                    do: ['@Gigamarr\SyliusBankOfGeorgiaPlugin\Processor\CompletionProcessor', 'process']
+                    args: ['object']
 
 sylius_resource:
     resources:
