--- a/src/Resources/config/services/formatters.yaml
+++ b/src/Resources/config/services/formatters.yaml
@@ -1,2 +1,4 @@
 services:
     Gigamarr\SyliusBankOfGeorgiaPlugin\Formatter\OrderToAuthorizeActionPayloadFormatter: ~
+
+    Gigamarr\SyliusBankOfGeorgiaPlugin\Formatter\PaymentToCaptureActionPayloadFormatter: ~
