--- a/src/Resources/config/services/processors.yaml
+++ b/src/Resources/config/services/processors.yaml
@@ -5,7 +5,7 @@ services:
             - '@payum'
             - '%gigamarr.sylius_bank_of_georgia_plugin.gateway_factory_name%'
  
-    Gigamarr\SyliusBankOfGeorgiaPlugin\Processor\CompletionProcessor:
+    Gigamarr\SyliusBankOfGeorgiaPlugin\Processor\CaptureProcessor:
         public: true
         arguments:
             - '@payum'
