--- a/src/Resources/config/services/payum.yaml
+++ b/src/Resources/config/services/payum.yaml
@@ -24,3 +24,11 @@ services:
             - '@monolog.logger.bank_of_georgia'
         tags:
             - { name: payum.action, factory: '%gigamarr.sylius_bank_of_georgia_plugin.gateway_factory_name%', alias: payum.action.capture }
+
+    Gigamarr\SyliusBankOfGeorgiaPlugin\Payum\Action\RefundAction:
+        public: true
+        arguments:
+            - '@Gigamarr\SyliusBankOfGeorgiaPlugin\Client\BankOfGeorgiaClient'
+            - '@monolog.logger.bank_of_georgia'
+        tags:
+            - { name: payum.action, factory: '%gigamarr.sylius_bank_of_georgia_plugin.gateway_factory_name%', alias: payum.action.refund }
