--- a/src/Resources/config/services/processors.yaml
+++ b/src/Resources/config/services/processors.yaml
@@ -4,7 +4,7 @@ services:
         arguments:
             - '@payum'
             - '%gigamarr.sylius_bank_of_georgia_plugin.gateway_factory_name%'
- 
+
     Gigamarr\SyliusBankOfGeorgiaPlugin\Processor\CaptureProcessor:
         public: true
         arguments:
@@ -12,6 +12,12 @@ services:
             - '%gigamarr.sylius_bank_of_georgia_plugin.gateway_factory_name%'
 
     Gigamarr\SyliusBankOfGeorgiaPlugin\Processor\RefundProcessor:
+        public: true
+        arguments:
+            - '@payum'
+            - '%gigamarr.sylius_bank_of_georgia_plugin.gateway_factory_name%'
+
+    Gigamarr\SyliusBankOfGeorgiaPlugin\Processor\PreAuthUnblockProcessor:
         public: true
         arguments:
             - '@payum'
