--- a/src/Resources/config/services/processors.yaml
+++ b/src/Resources/config/services/processors.yaml
@@ -3,22 +3,22 @@ services:
         public: true
         arguments:
             - '@payum'
-            - '%gigamarr.sylius_bank_of_georgia_plugin.gateway_factory_name%'
+            - '%gigamarr_sylius_bank_of_georgia_plugin.gateway_factory_name%'
 
     Gigamarr\SyliusBankOfGeorgiaPlugin\Processor\CaptureProcessor:
         public: true
         arguments:
             - '@payum'
-            - '%gigamarr.sylius_bank_of_georgia_plugin.gateway_factory_name%'
+            - '%gigamarr_sylius_bank_of_georgia_plugin.gateway_factory_name%'
 
     Gigamarr\SyliusBankOfGeorgiaPlugin\Processor\RefundProcessor:
         public: true
         arguments:
             - '@payum'
-            - '%gigamarr.sylius_bank_of_georgia_plugin.gateway_factory_name%'
+            - '%gigamarr_sylius_bank_of_georgia_plugin.gateway_factory_name%'
 
     Gigamarr\SyliusBankOfGeorgiaPlugin\Processor\PreAuthUnblockProcessor:
         public: true
         arguments:
             - '@payum'
-            - '%gigamarr.sylius_bank_of_georgia_plugin.gateway_factory_name%'
+            - '%gigamarr_sylius_bank_of_georgia_plugin.gateway_factory_name%'
