--- a/src/Resources/config/services/state_machine_guards.yaml
+++ b/src/Resources/config/services/state_machine_guards.yaml
@@ -2,4 +2,4 @@ services:
     Gigamarr\SyliusBankOfGeorgiaPlugin\StateMachine\Guard\GuardPaymentComplete:
         public: true
         arguments:
-            - '%gigamarr.sylius_bank_of_georgia_plugin.gateway_factory_name%'
+            - '%gigamarr_sylius_bank_of_georgia_plugin.gateway_factory_name%'
