master: remove bidirectional relationship between order and status change callback. use repository instead to find out if order is preauthorized or not.

--- a/src/Resources/config/services/state_machine_guards.yaml
+++ b/src/Resources/config/services/state_machine_guards.yaml
@@ -3,3 +3,4 @@ services:
         public: true
         arguments:
             - '%gigamarr_sylius_bank_of_georgia_plugin.gateway_factory_name%'
+            - 'gigamarr_sylius_bank_of_georgia_plugin.repository.status_change_callback'
